--- a/src/mail/templates/PasswordReset.ejs
+++ b/src/mail/templates/PasswordReset.ejs
@@ -2,22 +2,37 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Set a new password</title>
+    <title>Password Reset</title>
     <style>
-        /*Somebody needs to fill this.... */
+        .button {
+
+            background-color: cornflowerblue; 
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+        }
+
     </style>
 </head>
 
 <body>
-    <h1>Hey <%=username%>,</h1>
+    <h1 style="color: cornflowerblue;">Hey <%=username%>,</h1>
     <p>
-        You can set a new password<br>
+        It seems like you forgot your password. Don´t worry this happens to all of us every once in a while.
+        To set a new password please click the button below.
     </p>
-    <form>
-        <input style="background-color: rgb(6, 140, 202)" type="button" onclick="window.location.href = '<%=resetLink%>';" value="CLICK HERE!">
-    </form>
-    <p>
-        <br>Very design
+    <p style="color:red">
+        If you did not request a password reset you can savely ignore this email.
+    </p>
+
+    <a href="<%=resetLink%>" class="button">Reset Password</a>
+
+    <p style="color: cornflowerblue;">
+        <br>Thanks from the dopeshot team!
     </p>
 </body>
 
